--- a/style.css
+++ b/style.css
@@ -5,6 +5,41 @@
     background-color: black;
     color: white;
     text-align:center;
+    font-size:x-large
+}
+
+.sub-titular{
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: black;
+    color: lightgray;
+    text-align:center;
+    font-size:large
+}
+
+.s2-titular{
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: black;
+    color: gray;
+    text-align:center;
+    font-size:medium
+}
+
+.s3-titular{
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: black;
+    color: rgb(128, 128, 128);
+    text-align:center;
+    font-size:x-small
+}
+
+.back{
+    margin-bottom: 0;
+    background-color: black;
+    color: rgb(144, 0, 240);
+    text-align:center;
 }
 
 
@@ -21,6 +56,7 @@ body{
 
 .options:hover{
     color: rgb(240, 164, 0);
+    font-family: 'Cambria'
 }
 
 
@@ -32,7 +68,34 @@ body{
 }
 
 .controls-info:hover{
-    color: rgb(240, 108, 0);
+    font-family: 'Cambria', Cochin, Georgia, Times, Times New Roman, serif;
+    /* color: rgb(240, 108, 0); */
+}
+
+
+.tips-info{
+    margin-bottom: 0;
+    color: rgb(0, 232, 240);
+    text-align:center;
+}
+
+.tips-info::marker{
+    color: gray
+}
+
+
+div{
+    background-color: gray;
+    width: 40%;
+    height:fit-content;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.game-screen{
+    margin-left:auto;
+    margin-right:auto;
+    width:95%
 }
 
 
